[gd_scene load_steps=15 format=3 uid="uid://c7nw78smgtnly"]

[ext_resource type="Script" path="res://characters/templates/dynamic/dynamic_hero_template.gd" id="1_q18pr"]
[ext_resource type="Texture2D" uid="uid://dghag31oa3mgh" path="res://icon.svg" id="2_h7xk5"]
[ext_resource type="Resource" uid="uid://dubdjmlwescme" path="res://characters/templates/dynamic/resouce/CommonDynamicHeroStats.tres" id="2_mgynd"]
[ext_resource type="Shader" uid="uid://2kkcbhx6o08r" path="res://common/shaders/hit_flash.tres" id="3_26mcb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vkxh0"]
resource_local_to_scene = true
shader = ExtResource("3_26mcb")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_muajk"]
atlas = ExtResource("2_h7xk5")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcjw7"]
atlas = ExtResource("2_h7xk5")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxt4j"]
atlas = ExtResource("2_h7xk5")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_tcmco"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_muajk")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcjw7")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxt4j")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ex7oc"]
resource_name = "hit_flash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_g1fyt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_485ys"]
_data = {
"RESET": SubResource("Animation_g1fyt"),
"hit_flash": SubResource("Animation_ex7oc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uyajq"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p6ant"]
size = Vector2(128, 65)

[node name="DynamicHeroTemplate" type="CharacterBody2D"]
script = ExtResource("1_q18pr")
hero_data = ExtResource("2_mgynd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_vkxh0")
sprite_frames = SubResource("SpriteFrames_tcmco")
animation = &"run"

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_485ys")
}

[node name="StandingCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uyajq")

[node name="SittingCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_p6ant")
disabled = true

[node name="CoyoteJumpTimer" type="Timer" parent="."]

[node name="DamageTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
